Half fix sidebar on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,9 +21,3 @@ $root-font-family: -apple-system, 'Varela Round', Arial, sans-serif !default;
   margin-left: auto;
   margin-right: auto;
 }
-
-#sidebar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-}
